--- a/style.css
+++ b/style.css
@@ -19,6 +19,22 @@ body {
     
 }
 
+@media screen and (max-width: 1200px) {
+    .container {
+        width:100%;
+        height:100%;
+    }
+
+    .container .box1 #input, .box1 #select {
+        font-size:1.5rem;
+    }
+
+    .container .result {
+        font-size:1.5rem;
+    }
+
+}
+
 .container h1 {
     margin-top:30px;
     text-align:center;
@@ -63,4 +79,6 @@ body {
 
 .container .result {
     color:#34495e;
+    font-weight:700;
+    text-transform: uppercase;
 }
