--- a/style.css
+++ b/style.css
@@ -10,7 +10,9 @@ body {
     align-items:center;
     background-color:#34495e;
 }
-
+.arrow {
+font-family: "Segoe MDL2 Assets";
+}
 .container {
     width:400px;
     height:600px;
